# python_love_rust

./: .gitignore  LICENSE  README.md  requirements.txt
Chap0/: README.md
Chap0/add/: README.md
Chap0/cargo_hello_world/: README.md
Chap0/cargo_hello_world/hello_world/: Cargo.toml
Chap0/hello_world/: README.md  hello_world  hello_world.rs
Chap0/logic_unit/: Cargo.toml  README.md  pyproject.toml
Chap0/logic_unit/src/: lib.rs
Chap0/logic_unit/tests/: test_logic_unit.py
Chap0/string_sum/: Cargo.toml  README.md
Chap0/string_sum/src/: lib.rs
Chap1/pydict/: Cargo.toml  pyproject.toml  test.sh
Chap1/pydict/src/: lib.rs
Chap1/pydict/tests/: test_pydict.py
Chap1/pylist/: Cargo.toml  pyproject.toml  test.sh
Chap1/pylist/src/: lib.rs
Chap1/pylist/tests/: test_pylist.py
Chap1/pyset/: Cargo.toml  pyproject.toml
Chap1/pyset/src/: lib.rs
Chap1/pyset/tests/: test_pyset.py
Chap1/rust_value_to_pyobj/src/: lib.rs
Chap1/rust_value_to_pyobj/tests/: test_parse.py
Chap10/: README.md
Chap10/rust_objs/: Cargo.toml  pyproject.toml
Chap2/print_type_of_rust_obj/: Cargo.toml  pyproject.toml
Chap2/print_type_of_rust_obj/src/: lib.rs
Chap2/rust_value_to_pyobj/: Cargo.toml  pyproject.toml
Chap3/inherit/: Cargo.toml
Chap4/inherit/: pyproject.toml
Chap5/overload/: Cargo.toml  pyproject.toml
Chap6/static_demo/: Cargo.toml  pyproject.toml
Chap6/static_demo/src/: lib.rs
Chap7/set_op/: Cargo.toml  pyproject.toml
Chap7/set_op/src/: lib.rs
Chap8/map_reduce/: Cargo.toml  pyproject.toml
Chap9/json_process/: Cargo.toml  pyproject.toml
class_vs_struct/: Cargo.toml
class_vs_struct/python/: operation.py
class_vs_struct/src/: lib.rs
class_vs_struct/test/: test_operation.py
first_example/: Cargo.toml  pyproject.toml
first_example/python/: string_sum.py
first_example/string_sum/: README.md
first_example/test/: test_string_sum.py
string_sum/: Cargo.toml
string_sum/src/: lib.rs
(+32 files in other folders)
